src/views/Me/Works/Published/styles.module.css
.hint {
  @mixin flex-center-space-between;

  gap: var(--spacing-x-tight);
  padding: var(--spacing-tight);
  margin-top: var(--spacing-base);
  background: var(--color-grey-lighter);
  border-radius: 0.5rem;

  & .left {
    font-size: var(--font-size-sm);
    line-height: 1.375rem;
    color: var(--color-grey);

    & svg {
      margin-right: var(--spacing-x-tight);
    }
  }
}

.tabList {
  @mixin hide-scrollbar;

  display: flex;
  gap: var(--spacing-base);
  padding: var(--spacing-base) var(--spacing-base) 0;
  overflow-x: auto;
  -webkit-overflow-scrolling: touch;

  @media (--sm-up) {
    padding: var(--spacing-base) 0 0;
  }

  & .tabItem {
    @mixin transition;

    flex-shrink: 0;
    padding: var(--spacing-base-xxx-tight) var(--spacing-base-tight);
    font-size: var(--font-size-sm);
    font-feature-settings:
      'clig' off,
      'liga' off;
    line-height: 1.375rem;
    color: var(--color-grey-darker);
    cursor: pointer;
    background: var(--color-grey-lighter);
    border-radius: 0.5rem;
    transition-property: background-color, color;

    &:hover {
      background: var(--color-grey-light);
    }

    &.active {
      font-weight: var(--font-weight-semibold);
      color: var(--color-white);
      background: var(--color-black);
    }
  }
}

